@@ -2771,5 +2771,34 @@
     (should-equal (point) 1)
     (should-equal (mark) 2)))
 
+(ert-deftest text-quoting-style ()
+  (should (text-quoting-style))
+  (let ((text-quoting-style t))
+    (should-equal 'curve (text-quoting-style)))
+  (let ((text-quoting-style 'foo))
+    (should-equal 'curve (text-quoting-style)))
+  (let ((text-quoting-style 'grave))
+    (should-equal 'grave (text-quoting-style))))
+
+(ert-deftest substitute-quotes ()
+  (let ((text-quoting-style 'curve))
+    (should-equal (substitute-quotes "quotes ‘like this’") "quotes ‘like this’")
+    (should-equal (substitute-quotes "`x'") "‘x’")
+    (should-equal (substitute-quotes "`") "‘")
+    (should-equal (substitute-quotes "'") "’")
+    (should-equal (substitute-quotes "\\`") "\\‘"))
+  (let ((text-quoting-style 'straight))
+    (should-equal (substitute-quotes "quotes `like this'") "quotes 'like this'")
+    (should-equal (substitute-quotes "`x'") "'x'")
+    (should-equal (substitute-quotes "`") "'")
+    (should-equal (substitute-quotes "'") "'")
+    (should-equal (substitute-quotes "\\`") "\\'"))
+  (let ((text-quoting-style 'grave))
+    (should-equal (substitute-quotes "quotes `like this'") "quotes `like this'")
+    (should-equal (substitute-quotes "`x'") "`x'")
+    (should-equal (substitute-quotes "`") "`")
+    (should-equal (substitute-quotes "'") "'")
+    (should-equal (substitute-quotes "\\`") "\\`")))
+
 (provide 'compat-tests)
 ;;; compat-tests.el ends here
