@@ -14,6 +14,7 @@
 - compat-28: Add ~color-dark-p~.
 - compat-28: Add ~with-window-non-dedicated~.
 - compat-28: Add ~directory-files-and-attributes~ with COUNT argument.
+- compat-28: Add ~text-quoting-style~.
 - compat-29: Add ~compiled-function-p~.
 - compat-29: Add ~plist-get~ generalized variable.
 - compat-29: Add ~plistp~.
@@ -23,6 +24,7 @@
 - compat-29: Add ~buffer-local-set-state~ and ~buffer-local-restore-state~.
 - compat-29: Add ~use-region-beginning~, ~use-region-end~ and ~use-region-noncontiguous-p~.
 - compat-29: Add ~get-scratch-buffer-create~.
+- compat-29: Add ~substitute-quotes~.
 
 * Release of "Compat" Version 29.1.2.0
 
